namespace java com.prosper.chasing.common.interfaces.connection

service ConnectionService {
   
   void executeData(1: i32 userId, 2:binary message)

}

